2007-06-27  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_id.c:

	Everex NC1501/NC1503 reported by Scott Zahn

2007-06-20  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_bandwidth.c: (ViaSetPrimaryFIFO)

	FIFO settings for CX700

2007-06-14  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via_accel.c: (viaInitExa):

	Merged EXA initialization from trunk

2007-06-12  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
	
	* unichrome/via.h:
	* unichrome/via_dri.c: (VIADRIRingBufferInit):
	* unichrome/via_driver.c:
	* unichrome/via_id.c:
	* unichrome/via_id.h:
	* unichrome/via_swov.c: (viaCalculateVideoColor),
	(viaSetColorSpace), (ViaInitVideoStatusFlag), (ViaSetVidCtl),
	(SetFIFO_V3), (SetFIFO_V3_64or32or32), (SetFIFO_V3_64or32or16),
	(Upd_Video):
	* unichrome/via_vbe.c: (ViaVbeSetMode):
	* unichrome/via_video.c: (DecideOverlaySupport):

	Renamed VT3157 to VT3324.
	Added check for null data block in vbe.
	Remove version check for older version of Xorg.


2007-05-18 Xavier Bachelot <xavier-at-bachelot-dot-org> 

	* libxvmc/Makefile.am:
	* libxvmc/viaXvMC.c: (XvMCCreateContext):

	Backport 2 fixes from Xorg tree.
	http://gitweb.freedesktop.org/?p=xorg/driver/xf86-video-via.git;a=commit;h=362e03a38682bfcf366242c53444fa36b6052794
	http://gitweb.freedesktop.org/?p=xorg/driver/xf86-video-via.git;a=commit;h=3cd7dac2b5a1c4bfb66bd1b67904d72dc08cbd0e

2007-05-15  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* unichrome/via.h:
	* unichrome/via_driver.c: (VIASetupDefaultOptions):
	* unichrome/via_driver.h:
	* unichrome/via_swov.c: (viaWaitHQVFlip), (SetColorKey),
	(SetChromaKey), (Upd_Video):
	* unichrome/via_video.c: (Flip), (viaDmaBlitImage), (viaPutImage):

	Xv code cleanup.

2007-05-10  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_driver.c:
	* unichrome/via_driver.h:
	* unichrome/via.man:

	Added per chipset option defaults.  This should allow the